@@ -1,0 +1,5 @@
+State Type Rebal Sector Block AU Total_MB Free_MB Req_mir_free_MB Usable_file_MB Offline_disks Voting_files Name
+MOUNTED HIGH N 512 4096 4194304 51544064 40254656 6443008 11270549 0 Y DATA/
+MOUNTED NORMAL N 512 4096 4194304 1526208 954324 381552 286386 0 N FLASH/
+MOUNTED HIGH N 512 4096 4194304 68474432 53227084 8559304 14889260 0 N RECO/
+MOUNTED HIGH N 512 4096 4194304 763120 539248 381560 52562 0 N REDO/
