@@ -24,6 +24,7 @@ inventory:
 * Linux distro: Add support for reading os-release file and removing LSB support
 * Fix Solaris drives df output parsing adding better zfs handling
 * Make backend-collect-timeout working even while waiting on command output
+* Support ASM filesystems on Oracle Grid
 
 netdiscovery/netinventory:
 * Bump NetDiscovery & NetInventory task version to 2.4
